deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-manager
  labels:
    app.kubernetes.io/part-of: simple-task-manager
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
